[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/PowerupMenu/PowerupMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/XPBar/XPBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UI.gd" type="Script" id=3]
[ext_resource path="res://UI/EnergyIndicator/EnergyIndicator.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Timer/GameTimer.tscn" type="PackedScene" id=5]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="PowerupMenuPanel" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -160.0
margin_right = 320.0
margin_bottom = 160.0

[node name="XPBar" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_right = 1.0
margin_right = 0.0

[node name="EnergyIndicator" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -104.0
margin_right = 4856.0
margin_bottom = 5016.0

[node name="GameTimer" parent="." instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 16.0
margin_right = 0.0
margin_bottom = 89.0

[connection signal="activate_alarm" from="EnergyIndicator" to="." method="activate_alarm"]
